# chemunited-workflow

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  tray_launcher.py  update_plan.md
.claude/: settings.json
.github/workflows/: pre-commit.yml  publish.yml  security.yml
.tmp/: run_chemunited_server.py
.web-chemunited/: README.md  index.html  package-lock.json  package.json  vite.config.ts
.web-chemunited/src/: App.vue
.web-chemunited/src/assets/: base.css  main.css
.web-chemunited/src/components/: DevicePropertiesPanel.vue  SchemaForm.vue
.web-chemunited/src/composables/: useNotification.ts
.web-chemunited/src/router/: index.ts
.web-chemunited/src/stores/: runStatus.ts
.web-chemunited/src/views/: DashboardView.vue  DevicesView.vue  LogsView.vue  MonitoringView.vue  ProtocolsView.vue  RunControlView.vue  monitoring-window-plan.md
chemunited_workflow/: __init__.py  cli.py  clients.py  compiler.py  durations.py  enums.py  exceptions.py  executor.py  models.py  monitoring.py  platform.py  process.py  project_loader.py  quantity.py  terminal.py  tray_launcher.py
chemunited_workflow/api/: __init__.py  dependencies.py  monitoring_store.py  project_holder.py  run_store.py  schemas.py
chemunited_workflow/api/routers/: components.py  logs.py  monitoring.py  processes.py  project.py  protocols.py  runner.py  snapshots.py  ui.py
chemunited_workflow/api/services/: monitoring.py  protocol.py  runner.py
chemunited_workflow/api/static/: built-in.css
chemunited_workflow/api/templates/: base.html  devices.html  index.html  logs_ui.html  monitoring.html  protocols_ui.html  report.html  run_control.html  snapshots_ui.html
chemunited_workflow/mcp/: __init__.py  tools.py
chemunited_workflow/web/: index.html
chemunited_workflow/web/assets/: index-BBE8bfwo.js  index-BaIcZeJG.css  index-CBrpM0GK.css  index-CE5sNSuM.js  index-CE_eyuIF.js  index-ChEnR0Zu.css  index-DEweM8Lb.js  index-De53lUog.js  index-DfCiOeUT.js  index-DwlITH02.css  index-GxcENyWb.css  index-kW-fI_VQ.css
diagrams/: chemunited_workflow_architecture_and_api.drawio  chemunited_workflow_simple_overview.drawio
docs/: api-reference.md  concepts.md  contributing.md  deployment.md  html-ui.md  implementation.md  installation.md  mcp-tools.md  quickstart.md
examples/: custom_project_client.ipynb  user01.py
examples/custom_project/: __main__.py  custom_ui.md
examples/custom_project/_ui/static/: custom.css
examples/custom_project/connectivity/: associations.json  config.toml  monitoring.json
examples/custom_project/draw/: platform-devices.json  setup.py
examples/custom_project/protocols/: MultiThreading.py  React.py  SimpleMultithreading.py  __init__.py  clean.py  main_parameters.py
examples/custom_project/protocols_historic/: test_2026-05-15T10-38-00.json
examples/custom_project/ui/templates/: index.html
tests/: conftest.py  helpers.py
tests/fixtures/: associations.json  parameters.json
tests/integration/: test_api.py  test_dry_run.py  test_monitoring_api.py  test_monitoring_ui.py  test_run_http_e2e.py
tests/unit/: test_cli.py  test_clients.py  test_executor_cancellation.py  test_mcp.py  test_monitoring_service.py  test_monitoring_store.py  test_platform.py  test_process_parameters.py  test_project_loader.py  test_protocol_service.py  test_run_store.py  test_runner_stream.py  test_tray_launcher.py
workflow/: compiler.py  models.py  monitoring.py
