[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chemunited-workflow"
version = "0.0.1"
description = "Conditional NetworkX-based workflow execution with loopbacks and parallel branches."
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "networkx>=3.2",
    "loguru>=0.7",
    "rich>=13.0",
    "requests>=2.31",
    "fastapi>=0.115",
    "starlette>=1.0.1",
    "mcp[cli]>=1.23",
    "click>=8.1",
    "pint>=0.23",
    "pydantic-pint>=0.3",
    "pydantic>=2.10",
    "uvicorn>=0.29",
    "pystray>=0.19",
    "pillow>=10",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "responses>=0.25",
    "httpx>=0.27",
]

[project.scripts]
chemunited-workflow = "chemunited_workflow.cli:main"
chemunited-workflow-tray = "chemunited_workflow.tray_launcher:main"

[tool.setuptools]
packages = [
    "chemunited_workflow",
    "chemunited_workflow.api",
    "chemunited_workflow.api.routers",
    "chemunited_workflow.api.services",
    "chemunited_workflow.mcp",
]
