[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chemunited-workflow"
version = "0.0.3"
description = "Conditional NetworkX-based workflow execution with loopbacks and parallel branches."
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "chemunited-quantities>=0.0.2",
    "networkx>=3.2",
    "loguru>=0.7",
    "rich>=13.0",
    "requests>=2.31",
    "fastapi>=0.115",
    "starlette>=1.0.1",
    "mcp[cli]>=1.23",
    "click>=8.1",
    "pydantic>=2.10",
    "uvicorn>=0.29",
    "pystray>=0.19",
    "pillow>=10",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "responses>=0.25",
    "httpx>=0.27",
]
discovery = ["zeroconf>=0.131"]

[project.scripts]
chemunited-workflow = "chemunited_workflow.cli:main"

[tool.pytest.ini_options]
pythonpath = ["."]
norecursedirs = ["pytest-tmp-cli", ".pytest_cache", ".venv", "build", "dist"]

[tool.setuptools.package-data]
"chemunited_workflow" = ["web/index.html", "web/chemunited.ico", "web/assets/*", "py.typed"]

[tool.setuptools]
package-dir = {"" = "."}
packages = [
    "chemunited_workflow",
    "chemunited_workflow.api",
    "chemunited_workflow.api.routers",
    "chemunited_workflow.api.services",
    "chemunited_workflow.mcp",
]
